fix: fix lottie animation errors when uploading image and on mobile view

--- a/css/productPage.css
+++ b/css/productPage.css
@@ -359,26 +359,32 @@ header {
     cursor: pointer;
 }
 #dotlottie-canvas {
-    position: fixed; /* Keeps it on top */
-    top: 50%;
-    left: 50%;
-    width: 100vw; /* Half of the viewport width */
-    height: 100vh; /* Half of the viewport height */
-    transform: translate(-50%, -50%); /* Centers it */
-    z-index: 1000; /* Ensures it appears above all elements */
-    background: rgba(255, 255, 255, 0.3); /* Optional: semi-transparent background */
-    backdrop-filter: blur(20px); /* Optional: blur the background */
-    border-radius: 10px; /* Optional: rounded corners */
-    display: none; /* Initially hidden */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    display: none;
+    pointer-events: none;
+    transition: opacity 0.3s ease;
 }
+
 #dotlottie-animation {
     position: fixed;
-
     width: 50vw; /* Half of screen width */
     height: 50vh; /* Half of screen height */
     z-index: 1001;
-    transform-origin: 50% 50%;
-    transform-box: fill-box;
-    display: none; /* Initially hidden */
+    display: block; /* Initially hidden */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-size: cover;
+    display: none;
 }
 
